removing the flex config from grid columns to avoid layout issues

--- a/roll20-character-sheet-template/sheetname.css
+++ b/roll20-character-sheet-template/sheetname.css
@@ -116,12 +116,6 @@
 	grid-template-columns: 1fr 1fr 1fr;
 }
 
-.sheet-middle-column {
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-}
-
 .sheet-footer {
 	text-align: right;
 	font-style: italic;
